--- a/aws/package.json
+++ b/aws/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/jayoharedee/systools#readme",
   "dependencies": {
     "aws-sdk": "^2.2.37",
-    "commander": "^2.9.0"
+    "commander": "^2.9.0",
+    "nodemailer": "^2.2.1",
+    "nodemailer-ses-transport": "^1.3.0"
   }
 }
