--- a/aws/package.json
+++ b/aws/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "aws-sdk": "^2.2.37",
     "commander": "^2.9.0",
+    "node-crontab": "0.0.8",
     "nodemailer": "^2.2.1",
     "nodemailer-ses-transport": "^1.3.0"
   }
